2007-08-19  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: tell program its own name
	* lib32/Makefile.am: tell program its own name
	* scripts/.cvsignore: ignore ylwrap
	* src/modules/m2pa/m2pa_sl.c: move stdbool, version updates
	* src/modules/mtp/mtp_min.c: move stdbool, version updates
	* src/modules/sdt/sdt_pmod.c: move stdbool, version updates
	* src/modules/sl/sl_mux.c: move stdbool, version updates
	* src/modules/sl/slpmod.c: move stdbool, version updates
	* src/modules/tcap/tcap.c: move stdbool, version updates
	* src/modules/x400p-ss7/sl_x400p.c: move stdbool, version updates
	* src/test/perftest.c: move stdbool, version updates
	* src/test/inet/test-inet_raw.c: move stdbool, version updates
	* src/test/inet/test-inet_sctp.c: move stdbool, version updates
	* src/test/inet/test-inet_tcp.c: move stdbool, version updates
	* src/test/inet/test-inet_udp.c: move stdbool, version updates
	* src/test/inet/test-sctp.c: move stdbool, version updates
	* src/test/inet/test-sctp_n.c: move stdbool, version updates
	* src/test/inet/test-sctp_nc.c: move stdbool, version updates
	* src/test/inet/test-sctp_ns.c: move stdbool, version updates
	* src/test/inet/test-sctp_t.c: move stdbool, version updates
	* src/test/inet/test-tcpc.c: move stdbool, version updates
	* src/test/inet/test-tcps.c: move stdbool, version updates
	* src/test/inet/test-udpc.c: move stdbool, version updates
	* src/test/inet/test-udps.c: move stdbool, version updates
	* src/test/isup/test-q784.c: move stdbool, version updates
	* src/test/m2pa/test-m2pa.c: move stdbool, version updates
	* src/test/sctp/test-etsi_n.c: move stdbool, version updates
	* src/test/sctp/test-etsi_t.c: move stdbool, version updates
	* src/test/sctp/test-interop.c: move stdbool, version updates
	* src/test/sctp/test-sctp.c: move stdbool, version updates
	* src/test/sctp/test-sctp_n.c: move stdbool, version updates
	* src/test/sctp/test-sctp_n2.c: move stdbool, version updates